[fix] avatar image not in the middle of screen on mobile.

--- a/app/assets/styles/modules/components/_avatar.css
+++ b/app/assets/styles/modules/components/_avatar.css
@@ -4,9 +4,10 @@
   color: $mainBlack;
   text-transform: capitalize;
   font-family: 'Montserrat', sans-serif;
-  height: 100vh;
+  height: var(--height);
 
   @mixin at-large {
+    height: 100vh;
     width: 50vw;
   }
 
